--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -39,7 +39,7 @@
         "\n",
         "*   List some popular libraries for data science.\n",
         "*   List some popular tools for data science.\n",
-        "-   List some popilar languages for data science.\n",
+        "-   List some popular languages for data science.\n",
         "-   Show some basic arithmatic expressions in pyton.\n",
         "\n"
       ],
